<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionEdit"
        android:icon="@drawable/icon_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSave"
        android:icon="@drawable/icon_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionDelete"
        android:icon="@drawable/icon_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionShoppingList"
        android:icon="@drawable/icon_shoppinglist"
        android:title="@string/shoppinglist"
        app:showAsAction="ifRoom" />

</menu>