<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageRecipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/noimage" />

                        <ImageButton
                            android:id="@+id/ibRecipeUpload"
                            style="@android:style/Widget.ImageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitCenter"
                            app:srcCompat="@android:drawable/ic_menu_camera" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4">

                        <TextView
                            android:id="@+id/tvEmpty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRecipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recipe"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etRecipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:imeOptions="actionDone"
                            android:inputType="textPersonName|textCapWords"></EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPrepTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/preptime"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etPrepTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:imeOptions="actionDone"
                            android:inputType="time"></EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCookTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/cooktime"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etCookTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:imeOptions="actionDone"
                            android:inputType="time"></EditText>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/addingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etSize"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="93"
                                android:hint="@string/servesize"
                                android:inputType="number"
                                android:imeOptions="actionDone"
                                android:textSize="14sp" />

                            <ImageButton
                                android:id="@+id/calculate"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:contentDescription="@string/app_name"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/icon_add" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etQty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/addingredientsqty"
                            android:imeOptions="actionNext"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/etMeasure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:hint="@string/addmeasuresstr"
                            android:imeOptions="actionDone"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/etIngredient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="90"
                            android:hint="@string/addingredientsstr"
                            android:imeOptions="actionDone"
                            android:textSize="14sp" />

                        <ImageButton
                            android:id="@+id/addIngredient"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/icon_add" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/viewIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/lvViewIngredients"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/direction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/add_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etDirection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/adddirectionstr"
                            android:inputType="textImeMultiLine"
                            android:lines="5"
                            android:imeOptions="actionDone"
                            android:layout_weight="30"/>

                        <ImageButton
                            android:id="@+id/addDirection"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/icon_add" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/viewDirections"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/lvviewDirections"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>
</LinearLayout>